[gd_scene load_steps=4 format=3 uid="uid://bwd4j06olcxmr"]

[ext_resource type="PackedScene" uid="uid://dc0p05gocgu2v" path="res://scenes/info_elements/ArsCard.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/panels/ArtesReference.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cm4b624x2xln0" path="res://resources/sprites/backgrounds/logoletter1.png" id="3"]

[node name="ArtesReference" type="Popup"]
size = Vector2i(1870, 550)
visible = true
script = ExtResource("2")

[node name="BG" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(1850, 520)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3")
patch_margin_left = 78
patch_margin_top = 27
patch_margin_right = 72
patch_margin_bottom = 21

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(1850, 550)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="ShowAll" type="CheckButton" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Muestra todos"

[node name="ArtesList" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ArsCard" parent="ScrollContainer/VBoxContainer/ArtesList" instance=ExtResource("1")]
layout_mode = 2

[node name="ArsCard2" parent="ScrollContainer/VBoxContainer/ArtesList" instance=ExtResource("1")]
layout_mode = 2

[node name="ArsCard3" parent="ScrollContainer/VBoxContainer/ArtesList" instance=ExtResource("1")]
layout_mode = 2

[node name="ArsCard4" parent="ScrollContainer/VBoxContainer/ArtesList" instance=ExtResource("1")]
layout_mode = 2

[node name="ArsCard5" parent="ScrollContainer/VBoxContainer/ArtesList" instance=ExtResource("1")]
layout_mode = 2

[connection signal="pressed" from="ScrollContainer/VBoxContainer/ShowAll" to="." method="_on_CheckButton_pressed"]
